// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrimaryPanes should not render the directory root header if the directory root has not been set. 1`] = `
<Tabs
  activeIndex={1}
  className="sources-panel"
  onActivateTab={[Function]}
>
  <TabList
    activeIndex={0}
    className="source-outline-tabs"
    onActivateTab={[Function]}
    vertical={false}
  >
    <Tab
      active={false}
      className="tab sources-tab"
      key="sources-tab"
    >
      Sources
    </Tab>
    <Tab
      active={false}
      className="tab outline-tab"
      key="outline-tab"
    >
      Outline
    </Tab>
  </TabList>
  <TabPanels
    activeIndex={0}
    className="source-outline-panel"
    hasFocusableContent={true}
  >
    <div
      className="threads-list"
    >
      <Connect(SourcesTree) />
    </div>
    <Connect(Outline)
      alphabetizeOutline={false}
      onAlphabetizeClick={[Function]}
    />
  </TabPanels>
</Tabs>
`;

exports[`PrimaryPanes should render the directory root header if the directory root has been set. 1`] = `
<Tabs
  activeIndex={1}
  className="sources-panel"
  onActivateTab={[Function]}
>
  <TabList
    activeIndex={0}
    className="source-outline-tabs"
    onActivateTab={[Function]}
    vertical={false}
  >
    <Tab
      active={false}
      className="tab sources-tab"
      key="sources-tab"
    >
      Sources
    </Tab>
    <Tab
      active={false}
      className="tab outline-tab"
      key="outline-tab"
    >
      Outline
    </Tab>
  </TabList>
  <TabPanels
    activeIndex={0}
    className="source-outline-panel has-root"
    hasFocusableContent={true}
  >
    <div
      className="threads-list"
    >
      <div
        className="sources-clear-root-container"
        key="root"
      >
        <button
          className="sources-clear-root"
          onClick={[Function]}
          title="Remove directory root"
        >
          <AccessibleImage
            className="home"
          />
          <AccessibleImage
            className="breadcrumb"
          />
          <span
            className="sources-clear-root-label"
          >
            mdn.com
          </span>
        </button>
      </div>
      <Connect(SourcesTree) />
    </div>
    <Connect(Outline)
      alphabetizeOutline={false}
      onAlphabetizeClick={[Function]}
    />
  </TabPanels>
</Tabs>
`;
